[project]
name = "kub-enterprise-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cloud-sql-python-connector>=1.20.3",
    "fastapi>=0.136.3",
    "flashrank>=0.2.10",
    "google-cloud-aiplatform>=1.156.0",
    "google-cloud-discoveryengine>=0.20.0",
    "google-cloud-documentai>=3.15.0",
    "google-cloud-storage>=3.11.0",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-google-vertexai>=3.2.3",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langsmith>=0.8.9",
    "logfire[fastapi,requests]>=4.35.0",
    "loguru>=0.7.3",
    "nest-asyncio>=1.6.0",
    "numpy>=2.4.6",
    "pg8000>=1.31.5",
    "psycopg-pool>=3.3.1",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.0.0",
    "pypdf>=6.12.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "python-pptx>=1.0.2",
    "pytz>=2026.2",
    "qdrant-client>=1.18.0",
    "redis>=7.4.0",
    "redisvl>=0.20.0",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
    "streamlit>=1.58.0",
    "unstructured>=0.22.31",
    "uvicorn[standard]>=0.49.0",
]
